--- a/index.html
+++ b/index.html
@@ -639,21 +639,8 @@ Martin Philippe-Lesaffre <a href="https://orcid.org/0000-0002-1985-8758" class="
 </section>
 <section id="sub-lethal-effects" class="slide level2">
 <h2>Sub-lethal effects</h2>
-<div class="columns">
-<div class="column" style="width:50%;">
-<p><img data-src="images/images32.webp"></p>
-</div><div class="column" style="width:50%;">
-<div>
-<ul>
-<li class="fragment"><p>Reduction of fecundity</p></li>
-<li class="fragment"><p>Reduction of foraging</p></li>
-<li class="fragment"><p>Increase of oxydative stress</p></li>
-<li class="fragment"><p>Global decrease of the population size</p></li>
-</ul>
-</div>
-</div>
-</div>
-</section>
+
+<img data-src="images/image53.png" class="r-stretch"></section>
 <section id="indirect-positive-effects" class="slide level2">
 <h2>Indirect positive effects</h2>
 <div class="columns">
